--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,3 +6,6 @@ salle_tp_accueil:
   path: /accueil
   controller: App\Controller\SalleController::accueil
 
+salle_tp_afficher:
+  path:  /afficher/{numero}
+  controller: App\Controller\SalleController::afficher
