--- a/config/routes/salle/routes.yaml
+++ b/config/routes/salle/routes.yaml
@@ -17,6 +17,15 @@ salle_tp_dix:
 salle_tp_test_xml:
   path: /test/xml
   controller: App\Controller\SalleController::testXml
+
 salle_tp_test_json:
   path: /test/json
   controller: App\Controller\SalleController::testJson
+
+salle_tp_treize:
+  path: /treize
+  controller: App\Controller\SalleController::treize
+
+salle_tp_quatorze:
+  path: /quatorze
+  controller: App\Controller\SalleController::quatorze
