--- a/config/routes/salle/routes.yaml
+++ b/config/routes/salle/routes.yaml
@@ -29,3 +29,17 @@ salle_tp_treize:
 salle_tp_quatorze:
   path: /quatorze
   controller: App\Controller\SalleController::quatorze
+
+salle_tp_voir:
+  path: /voir/{id}
+  controller: App\Controller\SalleController::voir
+  requirements:
+    numero: \d+
+
+salle_tp_ajouter:
+  path: /ajouter/{batiment}-{etage}.{numero}
+  controller: App\Controller\SalleController::ajouter
+  requirements:
+    batiment: "A|B|C|D"
+    etage: \d
+    numero: \d{1,2}
