--- a/config/routes/salle/routes.yaml
+++ b/config/routes/salle/routes.yaml
@@ -43,3 +43,7 @@ salle_tp_ajouter:
     batiment: "A|B|C|D"
     etage: \d
     numero: \d{1,2}
+
+salle_tp_ajouter2:
+  path: /ajouter2
+  controller: App\Controller\SalleController::ajouter2
