--- a/config/routes/salle/routes.yaml
+++ b/config/routes/salle/routes.yaml
@@ -47,3 +47,7 @@ salle_tp_ajouter:
 salle_tp_ajouter2:
   path: /ajouter2
   controller: App\Controller\SalleController::ajouter2
+
+salle_tp_navigation:
+  path: /navigation
+  controller: App\Controller\SalleController::navigation
