--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,10 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    #services:
+    #    autowire: true
+    #    autoconfigure: true
+    #    App\:
+    #        resource: '../src/*'
+    #        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
